typo & link from login to register

--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -109,13 +109,13 @@
                                                                 <div class="alignment" align="center"
                                                                     style="line-height:10px">
                                                                     <div class="fullWidth" style="max-width:385px"><a
-                                                                            href="https://www.captaincoaster.com"
+                                                                            href="https://captaincoaster.com"
                                                                             target="_blank" style="outline:0"
                                                                             tabindex="-1"><img
                                                                                 src="https://captaincoaster.com/images/logo_big.png"
                                                                                 style="display:block;height:auto;border:0;width:100%"
-                                                                                width="385" alt="Captain coaster logo"
-                                                                                title="Captain coaster logo"></a></div>
+                                                                                width="385" alt="Captain Coaster logo"
+                                                                                title="Captain Coaster logo"></a></div>
                                                                 </div>
                                                             </td>
                                                         </tr>
@@ -174,7 +174,7 @@
                                                                             style="margin:0;font-size:14px;text-align:center;mso-line-height-alt:24px">
                                                                             <span style="font-size:16px">Vous avez fait
                                                                                 la demande de création d'un compte sur
-                                                                                le site captaincoaster.com</span></p>
+                                                                                le site de Captain Coaster</span></p>
                                                                         <p
                                                                             style="margin:0;font-size:14px;text-align:center;mso-line-height-alt:24px">
                                                                             <span style="font-size:16px">Veuillez
@@ -182,7 +182,7 @@
                                                                                 bouton ci-dessous.</span></p>
                                                                         <p
                                                                             style="margin:0;font-size:14px;text-align:center;mso-line-height-alt:24px">
-                                                                            <span style="font-size:16px">Le lien expirera dans {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}</span></p>
+                                                                            <span style="font-size:16px">Le lien expirera dans {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.</span></p>
                                                                         <p
                                                                             style="margin:0;font-size:14px;text-align:center;mso-line-height-alt:24px">
                                                                             <span style="font-size:16px">
