--- a/templates/Coaster/show.html.twig
+++ b/templates/Coaster/show.html.twig
@@ -313,7 +313,7 @@
                     {% for otherCoaster in coaster.park.coasters %}
                         <div class="list-group-item">
                             <span class="status-mark border-{{ otherCoaster.status.type }} position-left"></span>
-                            <a href="{{ path('bdd_show_coaster', {'slug': otherCoaster.slug}) }}">
+                            <a href="{{ path('show_coaster', {'id': otherCoaster.id, 'slug': otherCoaster.slug}) }}">
                                 {{ otherCoaster.name }}
                             </a>
                         </div>
