--- a/templates/Park/show.html.twig
+++ b/templates/Park/show.html.twig
@@ -76,7 +76,7 @@
                 {% for coaster in park.coasters %}
                     <li class="media panel panel-body stack-media-on-mobile border-bottom-xlg border-bottom-{{ coaster.status.type }}">
                         <div class="media-left">
-                            <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
+                            <a href="{{ path('show_coaster', {'id': coaster.id, 'slug': coaster.slug}) }}">
                                 <img {% if coaster.mainImage %}
                                     src="{{ pictures_cdn }}/280x210/{{ coaster.mainImage.filename }}"
                                 {% else %}
@@ -87,7 +87,8 @@
                         </div>
                         <div class="media-body" style="vertical-align: middle;">
                             <h2 class="media-heading mb-2 center" style="margin-bottom: -4px;">
-                                <a style="color:#333;" href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
+                                <a style="color:#333;"
+                                   href="{{ path('show_coaster', {'id': coaster.id, 'slug': coaster.slug}) }}">
                                     {{ coaster.name }}
                                 </a>
                             </h2>
