--- a/templates/Top/show.html.twig
+++ b/templates/Top/show.html.twig
@@ -45,7 +45,7 @@
         {% set coaster = topCoaster.coaster %}
         <li class="media panel-body stack-media-on-mobile">
           <div class="media-left">
-            <a href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
+            <a href="{{ path('show_coaster', {'id': coaster.id, 'slug': coaster.slug}) }}">
               {% if coaster.mainImage is not null %}
                 <img src="{{ pictures_cdn }}/280x210/{{ coaster.mainImage.filename }}"
                      class="img-rounded"
@@ -57,7 +57,7 @@
 
           <div class="media-body">
             <h2 class="media-heading text-semibold">
-              <a style="color:#333;" href="{{ path('bdd_show_coaster', {'slug': coaster.slug}) }}">
+              <a style="color:#333;" href="{{ path('show_coaster', {'id': coaster.id, 'slug': coaster.slug}) }}">
                 {{ topCoaster.position }}&nbsp;-&nbsp;{{ coaster.name }}
               </a>
             </h2>
