--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -53,7 +53,7 @@
               </a>
             {% else %}
               <a href="{{ path('login') }}">
-                <i class="icon-lock"></i> <span>{{ 'sidebar.login'|trans }}</span>
+                <i class="icon-key"></i> <span>{{ 'sidebar.login'|trans }}</span>
               </a>
             {% endif %}
           </li>
