add rate limiter & user checker

--- a/templates/bundles/TwigBundle/Exception/error429.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error429.html.twig
@@ -1,10 +1,10 @@
 {% extends "base.html.twig" %}
 
-{% set title = 'error.generic.title'|trans %}
+{% set title = 'error.429.title'|trans %}
 
 {% block body %}
     <div class="text-center content-group">
         <h1 class="error-title">Oops</h1>
-        <h3>{{ 'error.generic.message'|trans }}</h3>
+        <h3>{{ 'error.429.message'|trans }}</h3>
     </div>
 {% endblock %}
