--- a/templates/connect/login.html.twig
+++ b/templates/connect/login.html.twig
@@ -51,7 +51,7 @@
             </li>
         </ul>
         <span class="help-block text-center no-margin">
-                            {{ 'login.terms'|trans({'%link_path%': path('default_privacy_policy')})|raw }}
+                            {{ 'login.terms'|trans({'%link_path%': path('app_terms_conditions')})|raw }}
                         </span>
     </div>
     <!-- /form with validation -->
