--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -164,7 +164,9 @@
                                                             <!--[if !mso]>--><td class="t5" style="width:480px;">
                                                                 <!--<![endif]-->
                                                                 <!--[if mso]><td class="t5" style="width:480px;"><![endif]-->
-                                                                <h1 class="t4" style="margin:0;Margin:0;font-family:Albert Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:41px;font-weight:800;font-style:normal;font-size:39px;text-decoration:none;text-transform:none;letter-spacing:-1.56px;direction:ltr;color:#333333;text-align:left;mso-line-height-rule:exactly;mso-text-raise:1px;">Confirm your email</h1></td>
+                                                                <h1 class="t4"
+                                                                    style="margin:0;Margin:0;font-family:Albert Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:41px;font-weight:800;font-style:normal;font-size:39px;text-decoration:none;text-transform:none;letter-spacing:-1.56px;direction:ltr;color:#333333;text-align:left;mso-line-height-rule:exactly;mso-text-raise:1px;">{{ 'register.email.h1'|trans }}</h1>
+                                                            </td>
                                                         </tr></table>
                                                 </td></tr><tr><td><div class="t7" style="mso-line-height-rule:exactly;mso-line-height-alt:16px;line-height:16px;font-size:1px;display:block;">&nbsp;</div></td></tr><tr><td>
                                                     <!--[if !mso]>--><table class="t10" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;">
@@ -174,7 +176,9 @@
                                                             <!--[if !mso]>--><td class="t9" style="width:480px;">
                                                                 <!--<![endif]-->
                                                                 <!--[if mso]><td class="t9" style="width:480px;"><![endif]-->
-                                                                <p class="t8" style="margin:0;Margin:0;font-family:Albert Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:21px;font-weight:400;font-style:normal;font-size:16px;text-decoration:none;text-transform:none;letter-spacing:-0.64px;direction:ltr;color:#333333;text-align:left;mso-line-height-rule:exactly;mso-text-raise:2px;">To use Captain Coaster, click the verification button. This helps keep your account secure. This link is valid for {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.</p></td>
+                                                                <p class="t8"
+                                                                   style="margin:0;Margin:0;font-family:Albert Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:21px;font-weight:400;font-style:normal;font-size:16px;text-decoration:none;text-transform:none;letter-spacing:-0.64px;direction:ltr;color:#333333;text-align:left;mso-line-height-rule:exactly;mso-text-raise:2px;">{{ 'register.email.paragraph1'|trans }} {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}
+                                                                    .</p></td>
                                                         </tr></table>
                                                 </td></tr><tr><td><div class="t12" style="mso-line-height-rule:exactly;mso-line-height-alt:35px;line-height:35px;font-size:1px;display:block;">&nbsp;</div></td></tr><tr><td>
                                                     <!--[if !mso]>--><table class="t14" role="presentation" cellpadding="0" cellspacing="0" style="Margin-right:auto;">
@@ -184,7 +188,10 @@
                                                             <!--[if !mso]>--><td class="t13" style="background-color:#5D88D6;overflow:hidden;width:105px;text-align:center;line-height:34px;mso-line-height-rule:exactly;mso-text-raise:6px;border-radius:40px 40px 40px 40px;">
                                                                 <!--<![endif]-->
                                                                 <!--[if mso]><td class="t13" style="background-color:#5D88D6;overflow:hidden;width:105px;text-align:center;line-height:34px;mso-line-height-rule:exactly;mso-text-raise:6px;border-radius:40px 40px 40px 40px;"><![endif]-->
-                                                                <a class="t11" href="{{ signedUrl|raw }}" style="display:block;margin:0;Margin:0;font-family:Inter Tight,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:34px;font-weight:900;font-style:normal;font-size:13px;text-decoration:none;text-transform:uppercase;direction:ltr;color:#FFFFFF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:6px;" target="_blank">Confirm</a></td>
+                                                                <a class="t11" href="{{ signedUrl|raw }}"
+                                                                   style="display:block;margin:0;Margin:0;font-family:Inter Tight,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:34px;font-weight:900;font-style:normal;font-size:13px;text-decoration:none;text-transform:uppercase;direction:ltr;color:#FFFFFF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:6px;"
+                                                                   target="_blank">{{ 'register.email.button'|trans }}</a>
+                                                            </td>
                                                         </tr></table>
                                                 </td></tr><tr><td><div class="t16" style="mso-line-height-rule:exactly;mso-line-height-alt:35px;line-height:35px;font-size:1px;display:block;">&nbsp;</div></td></tr><tr><td>
                                                     <!--[if !mso]>--><table class="t18" role="presentation" cellpadding="0" cellspacing="0" style="Margin-left:auto;Margin-right:auto;">
@@ -194,7 +201,9 @@
                                                             <!--[if !mso]>--><td class="t17" style="width:480px;">
                                                                 <!--<![endif]-->
                                                                 <!--[if mso]><td class="t17" style="width:480px;"><![endif]-->
-                                                                <p class="t15" style="margin:0;Margin:0;font-family:Albert Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:21px;font-weight:400;font-style:normal;font-size:16px;text-decoration:none;text-transform:none;letter-spacing:-0.64px;direction:ltr;color:#333333;text-align:left;mso-line-height-rule:exactly;mso-text-raise:2px;">You&#39;re receiving this email because you have created an account in Captain Coaster. If you are not sure why you&#39;re receiving this, please contact us by replying to this email.</p></td>
+                                                                <p class="t15"
+                                                                   style="margin:0;Margin:0;font-family:Albert Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:21px;font-weight:400;font-style:normal;font-size:16px;text-decoration:none;text-transform:none;letter-spacing:-0.64px;direction:ltr;color:#333333;text-align:left;mso-line-height-rule:exactly;mso-text-raise:2px;">{{ 'register.email.paragraph2'|trans }}</p>
+                                                            </td>
                                                         </tr></table>
                                                 </td></tr></table></td>
                                 </tr></table>
